--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "next": "latest",
+    "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-is": "^17.0.2",
     "styled-components": "^5.2.3"
   },
